# SwiftClaim-Insurance---ML-Mini-Project

./: .env.example  .gitignore  COMPLETE_EXPLANATION.md  MONGODB_SETUP.md  README.md  SETUP.bat  START.bat  docker-compose.yml
.github/: labeler.yml
.github/workflows/: cd.yml  ci.yml  pr-check.yml
backend/: .dockerignore  Dockerfile  ML_MODEL_GUIDE.md  ML_SETUP_COMPLETE.md  NaN_FIX_SUMMARY.md  PREDICTION_FIXES_SUMMARY.md  QUICKSTART_ML.md  app.py  damage_detector.py  dataset_generator.py  evaluate_model.py  generate_part_images.py  model_manager.py  mongodb_client.py  parts_database.py  parts_prices.db  payout_calculator.py  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt  run_ml_pipeline.py  severity_estimator.py  test_detector.py  test_e2e.py  train_model.py
backend/models/: best_model.h5  damage_severity_model.h5
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Navbar.jsx
frontend/src/lib/: mongodbClient.js
frontend/src/pages/: Home.jsx  SwiftClaim.jsx
