[project]
name = "swiftclaim-backend"
version = "1.0.0"
description = "SwiftClaim — AI-powered vehicle damage detection and insurance claim engine"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "opencv-python-headless>=4.9.0",
    "Pillow>=10.0.0",
    "numpy>=1.26.0",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["."]
omit = [
    "test_*.py",
    "generate_part_images.py",
    "__pycache__/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
